# fhir-aws-pipeline

./: .gitignore  README.md  cdk.json  design.txt  package-lock.json  package.json  test.ts
Sample Data/: claim.json  explanation of benefit.json  output.txt  patient.json  patient_flattened.json  test.json
lib/: fhir-aws-pipeline-stack.ts
projects/: package.ps1  script.sh
projects/fhir-bundle-processor/: README.md  main.py  pyproject.toml  readme.md  readme.txt  requirements.txt
projects/fhir-bundle-processor/app/: main.py
projects/fhir-bundle-processor/events/: fhir-bundle.json  s3-event.json
projects/fhir-bundle-processor/fhir_bundle_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/fhir-diagnosis-processor/: main.py
projects/fhir-medications-processor/: main.py  requirements.txt
projects/fhir-patient-processor/: main.py  main_claim.py  main_medications.py  test.py  test_diagnosis.py  test_encounter.py  test_procedure.py
projects/fhir-procedures-processor/: main.py
projects/fhir-receiver/: readme.txt
projects/fhir-visits-processor/: main.py
projects/patient-processor/: readme.txt
test/: fhir-aws-pipeline.test.ts
