[project]
name = "fhir-bundle-processor"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeyamurugan Palaniselvam",email = "jyamurugan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "fhir_bundle_processor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
